--- a/style2.css
+++ b/style2.css
@@ -242,3 +242,41 @@ transform:scale(1.1);
 .btn:hover{
   background: #ff004f;
 }
+
+/* ------contact---- */
+.contact-left{
+  flex-basis: 35%;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.contact-left p{
+  margin-top: 30px;
+}
+.contact-left p i{
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 25px;
+
+}
+.social-icons{
+  margin-top: 30px;
+
+}
+.social-icons a{
+  text-decoration: none;
+  font-size:30px;
+  margin-right: 15px;
+  color:#ababab;
+  display: inline-block;
+}
+.social-icons a:hover {
+  color: #ff004f;
+  transform: translateY(5px);
+
+}
+.btn.btn2{
+  display: inline-block;
+  background: #ff004f;
+
+}
