--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Body */
 body {
   background: #080808;
@@ -14,31 +18,62 @@ body {
 
 /* Header */
 #header {
-  width: 90%;
-  height: 105vh;
+  width: 100%;
+  height: 102vh;
   background-image: url(images/fblack.png);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  display: flex; /* Added */
+  justify-content: flex-end; /* Added */
+  align-items: center; /* Added */
+}
+
+.header-text {
+  margin-top: 20%;
+  font-size: 30px;
+  text-align: left; /* Added */
+}
+
+.header-text h1 {
+  font-size: 60px;
+  margin-top: 20px;
+}
+
+.header-text h1 span {
+  color: #ff004f;
+}
+
+/* Align UI/UX Designer to the right */
+.header-text p {
+  text-align: left; /* Added */
 }
 
 .container {
-  padding: 10px 10%;
+  padding: 10px;
+  width: 100%;
 }
 
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  width: 100%;
+  padding: 10px 20px;
+  position: absolute;
+  top: 0;
 }
 
 .logo {
   width: 140px;
 }
 
-nav ul li {
-  display: inline-block;
+nav ul {
+  display: flex;
   list-style: none;
+}
+
+nav ul li {
   margin: 10px 20px;
 }
 
@@ -310,78 +345,96 @@ nav ul li a:hover::after {
 .social-icons {
   margin-top: 30px;
 }
-.social-icons a{
+
+.social-icons a {
   text-decoration: none;
-  font-size:30px;
+  font-size: 30px;
   margin-right: 15px;
-  color:#ababab;
+  color: #ababab;
   display: inline-block;
 }
+
 .social-icons a:hover {
   color: #ff004f;
   transform: translateY(5px);
-
 }
-.btn.btn2{
+
+.btn.btn2 {
   display: inline-block;
   background: #ff004f;
-
 }
-.contact-right form{
+
+.contact-right form {
   width: 100%;
 }
-form input, form textarea{
-width:100% ;
-border: 0;
-outline: none;
-background: #262626;
-padding:15px ;
-margin: 15px 0;
-color: #fff;
-font-size: 18px;
-border-radius: 6px;
+
+form input, form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
 }
-form .btn2{
+
+form .btn2 {
   padding: 14px 60px;
   font-size: 18px;
   margin-top: 20px;
   cursor: pointer;
-
-
 }
-.copyright{
+
+.copyright {
   width: 100%;
   text-align: center;
-  padding: 20px 0;
-  background: #262626;
-  font-weight:300;
-  margin-top:20px;
-}
-.copyright i{
-  color:#ff004f ;
-}
-/* -------css for small screen------- */
-nav.fa-solid{
-  display: none;
+  padding: 12px 0;
+  background: #000000;
+  font-weight: light;
+  margin-top: 20px;
 }
 
-@media only screen and (max-width: 600px){
-  #header{
-    background-image: url(images/fblack.png);
-  }
-  .header-text{
-    margin: top;
+copyright i {
+  color: #ff004f;
+}
+
+/* Small Screen Styles */
+@media only screen and (max-width: 600px) {
+  .header-text {
     font-size: 16px;
   }
-  .header-text h1{
+
+  .header-text h1 {
     font-size: 30px;
   }
-  nav.fa-solid {
-    display: block;
-    font-size:25px;
-  }
+
   nav ul {
-    background:#ff004f;
+    display: none;
+  }
+
+  .fa-bars {
+    display: block;
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+
+  .fa-xmark {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 25px;
+    cursor: pointer;
+    display: none;
+  }
+
+  nav ul {
+    display: block;
+    background: #ff004f;
     position: fixed;
     top: 0;
     right: -200px;
@@ -389,39 +442,54 @@ nav.fa-solid{
     height: 100vh;
     padding-top: 50px;
     z-index: 2;
-    transition: right 0.5s; ;
+    transition: right 0.5s;
+  }
 
-  }
-  nav ul li{
+  nav ul li {
     display: block;
-    margin:25px;
+    margin: 25px;
   }
-  nav ul .fa-solid{
-    position:absolute;
-    top:25px;
-    left:25px;
-    cursor: pointer;
-  }
-  .sub-title{
+
+  .sub-title {
     font-size: 40px;
   }
-  .about-col-1, .about-col-2{
+
+  .about-col-1, .about-col-2 {
     flex-basis: 100%;
   }
-  .about-col-1{
-   margin-bottom: 30px;
+
+  .about-col-1 {
+    margin-bottom: 30px;
   }
-  .about-col-2{
-   font-size: 14px;
+
+  .about-col-2 {
+    font-size: 14px;
+  }
+
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+
+  .contact-left, .contact-right {
+    flex-basis: 100%;
+  }
+
+  .copyright {
+    font-size: 14px;
+  }
 }
-.tab-links{
-  font-size: 16px;
-  margin-right: 20px;
+
+#msg {
+  color: #61b761;
+  margin-top: -40px;
+  display: block;
 }
-.contact-left, .contact-right{
-  flex-basis: 100%;
+/* Hide menu and cross buttons on larger screens */
+@media only screen and (min-width: 601px) {
+  nav .fa-bars,
+  nav ul .fa-xmark {
+    display: none;
+  }
 }
-.copyright{
-  font-size: 14px;
-}
-}
+
