--- a/style2.css
+++ b/style2.css
@@ -138,7 +138,7 @@ nav ul li a:hover::after {
   flex-basis: 60%;
 }
 
-.sub-title {
+.sub-title {  /*about me */
   font-size: 60px;
   font-weight: 600;
   color: #fff;
@@ -149,9 +149,9 @@ nav ul li a:hover::after {
   margin: 20px 0 40px;
 }
 
-.tab-links {
-  margin-right: 50px;
-  font-size: 18px;
+.tab-links { /* skill exp */
+  margin-right: 100px;
+  font-size: 19px;
   font-weight: 500;
   cursor: pointer;
   position: relative;
@@ -174,12 +174,12 @@ nav ul li a:hover::after {
 
 .tab-contents ul li {
   list-style: none;
-  margin: 10px 0;
+  margin: 18px 0;
 }
 
 .tab-contents ul li span {
-  color: #b54769;
-  font-size: 14px;
+  color: #083ef2;
+  font-size: 18px;
 }
 
 .tab-contents {
@@ -189,6 +189,7 @@ nav ul li a:hover::after {
 .tab-contents.active-tab {
   display: block;
 }
+
 
 /* Services Section */
 #services {
@@ -205,18 +206,41 @@ nav ul li a:hover::after {
 .services-list div {
   background: #262626;
   padding: 40px;
-  font-size: 13px;
+  font-size: 17px;
   font-weight: 300;
   border-radius: 10px;
-  transition: background 0.5s, transform 0.5s;
+  transition: background 0.3s, transform 0.3s;
+  position: relative;
+  overflow: hidden;
 }
 
-.services-list div i {
+.services-list div::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ff004f;
+  transform: translateY(100%);
+  transition: transform 0.3s;
+  z-index: 0;
+}
+
+.services-list div > * {
+  position: relative;
+  z-index: 1;
+}
+
+.services-list div i { /*icons*/
+  color: #ff004f;
   font-size: 50px;
   margin-bottom: 30px;
+  transition: color 0.3s;
 }
 
 .services-list div h2 {
+  color: #eae2e4;
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 15px;
@@ -224,15 +248,59 @@ nav ul li a:hover::after {
 
 .services-list div a {
   text-decoration: none;
-  color: #fff;
-  font-size: 12px;
+  color: #ffffff;
+  font-size: 14px;
   margin-top: 20px;
   display: inline-block;
+  position: relative;
+  padding: 5px 10px;
+  transition: color 0.3s, background 0.3s;
+  overflow: hidden;
+  z-index: 2;
+  border-radius: 5px;
+}
+
+.services-list div a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ff004f;
+  transform: scale(0);
+  transition: transform 0.3s;
+  z-index: -1;
 }
 
 .services-list div:hover {
-  background: #ff004f;
-  transform: scale(1.05);
+  transform: translateY(5px);
+}
+
+.services-list div:hover::before {
+  transform: translateY(0);
+}
+
+.services-list div:hover i {
+  color: #ffffff;
+}
+
+.services-list div.link-hover {
+  transform: translateY(15px);
+}
+
+.services-list div.link-hover::before {
+  transform: translateY(100%);
+  transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.services-list div.link-hover a::before {
+  transform: scale(1);
+  transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.services-list div.link-hover a {
+  color: #ffffff;
 }
 
 /* Portfolio Section */
@@ -265,7 +333,7 @@ nav ul li a:hover::after {
 .layer {
   width: 87%;
   height: 0%;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), #2b2a2a);
   border-radius: 10px;
   position: absolute;
   left: 0;
