--- a/style2.css
+++ b/style2.css
@@ -63,6 +63,17 @@ nav {
   position: absolute;
   top: 0;
 }
+#nav-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
 
 .logo {
   width: 140px;
@@ -469,6 +480,11 @@ form .btn2 {
 form .btn2:hover{
   background: #ff004f;
 }
+#msg {
+  color: #61b761;
+  margin-top: -40px;
+  display: block;
+}
 
 .copyright {
   width: 100%;
@@ -497,7 +513,7 @@ form .btn2:hover{
     display: none;
   }
 
-  .fa-bars {
+  .fa-bars { /*menu button*/
     display: block;
     font-size: 25px;
     cursor: pointer;
@@ -506,7 +522,7 @@ form .btn2:hover{
     right: 20px;
   }
 
-  .fa-xmark {
+  /* .fa-xmark {
     position: absolute;
     top: 0px;
     right: 20px;
@@ -514,17 +530,17 @@ form .btn2:hover{
     font-size: 25px;
     cursor: pointer;
     display: none;
-  }
+  } */
 
   nav ul {
     display: block;
     background:transparent;
     position: fixed;
-    top: 0;
+    top: 0px;
     right: -200px;
     width: 200px;
     height: 100%;
-    padding-top: 20px;
+    padding-top: 50px;
     z-index: 2;
     transition: right 0.5s;
   }
@@ -562,12 +578,7 @@ form .btn2:hover{
   .copyright {
     font-size: 14px;
   }
-}
-
-#msg {
-  color: #61b761;
-  margin-top: -40px;
-  display: block;
+  
 }
 /* Hide menu and cross buttons on larger screens */
 @media only screen and (min-width: 601px) {
@@ -576,3 +587,56 @@ form .btn2:hover{
     display: none;
   }
 }
+#nav-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+/* Small Screen Styles */
+@media only screen and (max-width: 600px) {
+  /* Add other styles here */
+
+  #sidemenu {
+    background: #000; /* Ensure the menu is visible */
+    z-index: 2; /* Ensure the menu is above the overlay */
+  }
+}
+/*for blur menu effect 
+#content-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  nav ul {
+    background: #1f1f1f;
+    padding-top: 80px;
+  }
+
+  nav ul li {
+    margin: 25px 0;
+  }
+
+  nav ul li a {
+    color: #fff;
+    font-size: 18px;
+  }
+
+  .blur {
+    filter: blur(5px);
+  }
+}*/
+
