--- a/style2.css
+++ b/style2.css
@@ -74,6 +74,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
+  /* background:transparent; does it really work haha*/
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
@@ -82,7 +83,7 @@ nav {
 .logo {
   width: 140px;
 }
-
+/* do sth with logo too idea inst of pic use text and alter color?? */
 nav ul {
   display: flex;
   list-style: none;
@@ -323,6 +324,7 @@ nav ul li a:hover::after {
   padding: 50px 0;
 }
 
+
 .work-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -380,6 +382,10 @@ nav ul li a:hover::after {
   height: 60px;
   border-radius: 50%;
   text-align: center;
+  transition: :box-shadow 0.3s ease;
+}
+.layer a:hover {
+  box-shadow: 0 0 15px #ff004f;
 }
 
 .work:hover img {
@@ -582,6 +588,11 @@ form .btn2:hover{
   .copyright {
     font-size: 14px;
   }
+
+  #sidemenu {
+    background: #000; /* Ensure the menu is visible */
+    z-index: 2; /* Ensure the menu is above the overlay */
+  }
   
 }
 /* Hide menu and cross buttons on larger screens */
@@ -591,7 +602,7 @@ form .btn2:hover{
     display: none;
   }
 }
-#nav-overlay {
+#nav-overlay { /* this is color of webpage while small menu is being opened*/
   display: none;
   position: fixed;
   top: 0;
@@ -605,10 +616,4 @@ form .btn2:hover{
 /* Small Screen Styles */
 @media only screen and (max-width: 600px) {
   /* Add other styles here */
-
-  #sidemenu {
-    background: #000; /* Ensure the menu is visible */
-    z-index: 2; /* Ensure the menu is above the overlay */
-  }
 }
-/* small screen menu ##2 with idk */
