--- a/style2.css
+++ b/style2.css
@@ -292,17 +292,22 @@ nav ul li a:hover::after {
 
 
 .tab-titles {
-  color: #ffffff;;
-  display: flex;
-  margin: 20px 0 40px;
+ color: #474646;
+ display: flex;
+ margin: 20px 0 40px;
 }
 
-.tab-links { /* skill exp */
-  margin-right: 100px;
-  font-size: 19px;
+.tab-links {
+  margin-right: 50px;
+  font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   position: relative;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.tab-links:hover {
+  transform: translateY(-2px);
 }
 
 .tab-links::after {
@@ -313,29 +318,43 @@ nav ul li a:hover::after {
   position: absolute;
   left: 0;
   bottom: -8px;
-  transition: 0.5s;
+  transition: width 0.5s ease;
 }
 
 .tab-links.active-link::after {
   width: 50%;
-}
-
-.tab-contents ul li {
-  list-style: none;
-  margin: 18px 0;
-}
-
-.tab-contents ul li span {
-  color: #083ef2;
-  font-size: 18px;
+  
 }
 
 .tab-contents {
   display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+#skills span{
+  padding: 30px 2;
+ 
 }
 
 .tab-contents.active-tab {
   display: block;
+  opacity: 1;
+}
+.tab-contents ul li {
+  list-style: none;
+  margin: 0 0 20px 0; /* This adds space between skills */
+  color: #474646;
+  
+}
+
+.tab-contents ul li span {
+  color:#4ecdc4;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.tab-contents ul li {
+  margin-bottom: 30px; /* Increased space between skills topic */
 }
 
 
