--- a/style2.css
+++ b/style2.css
@@ -386,10 +386,10 @@ h1.sub-title:hover {
   font-size: 24px;
   padding: 30px 0;
 }
-.sub-title{
+/* .sub-title{
   font-size: 44px;
   color: #474646;
-}
+} */
 
 .services-list {
   display: grid;
@@ -435,7 +435,7 @@ h1.sub-title:hover {
 }
 
 .services-list div h2 {
-  color: #eae2e4;
+  color: #dbd0d0;
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 15px;
@@ -443,9 +443,10 @@ h1.sub-title:hover {
 
 .services-list div a {
   text-decoration: none;
-  color: #ffffff;
+  color: #dbd0d0;
   font-size: 14px;
   margin-top: 20px;
+  font: weight 0px;
   display: inline-block;
   position: relative;
   padding: 5px 10px;
@@ -477,7 +478,7 @@ h1.sub-title:hover {
 }
 
 .services-list div:hover i {
-  color: #ffffff;
+  color: #dbd0d0;
 }
 
 .services-list div.link-hover {
@@ -495,7 +496,8 @@ h1.sub-title:hover {
 }
 
 .services-list div.link-hover a {
-  color: #ffffff;
+  color: #dbd0d0;
+  
 }
 
 /* Portfolio Section */
@@ -583,7 +585,7 @@ h1.sub-title:hover {
   padding: 14px 50px;
   border-radius: 6px;
   text-decoration: none;
-  color: #fff;
+  color: #dbd0d0;
   transition: background 0.5s;
 }
 
@@ -594,6 +596,10 @@ h1.sub-title:hover {
 /* Contact Section */
 .contact-left {
   flex-basis: 35%;
+}
+
+.contact-left h1 {
+ color:#dbd0d0;
 }
 
 .contact-right {
@@ -618,13 +624,13 @@ h1.sub-title:hover {
   text-decoration: none;
   font-size: 30px;
   margin-right: 15px;
-  color: #ababab;
+   color: #dbd0d0;
   display: inline-block;
 }
 
 .social-icons a:hover {
   color: #ff004f;
-  transform: translateY(5px);
+  transform: translateY(0px);
 }
 
 .btn.btn2 {
@@ -635,7 +641,7 @@ h1.sub-title:hover {
   padding: 14px 50px;
   border-radius: 6px;
   text-decoration: none;
-  color: #fff;
+  color: #dbd0d0;
   transition: background 0.5s; /*submitn cv dwnload btn*/
 }
 .btn.btn2:hover {
@@ -653,7 +659,7 @@ form input, form textarea {
   background: #262626;
   padding: 15px;
   margin: 15px 0;
-  color: #fff;
+  color: #dbd0d0;
   font-size: 18px;
   border-radius: 6px;
 }
@@ -670,7 +676,7 @@ form .btn2:hover{
   background: #ff004f;
 }
 #msg {
-  color: #61b761;
+  color: hsl(120, 87%, 24%);
   margin-top: -40px;
   display: block;
 }
@@ -678,10 +684,11 @@ form .btn2:hover{
 .copyright {
   width: 100%;
   text-align: center;
-  padding: 12px 0;
-  background: #fff;
+  padding: 7px 0;
+  background: #262626;
   font-weight: light;
-  margin-top: 20px;
+  margin-left:0px;
+ 
 }
 
 .copyright i {
