--- a/style2.css
+++ b/style2.css
@@ -606,8 +606,13 @@ h1.sub-title:hover {
   color: #ff004f;
   margin-right: 15px;
   font-size: 25px;
+  opacity:1.8;
 }
 
+.contact-left p i:hover{
+  color:#ffffff;
+  /* make it go to mail n call maybe?? */
+}
 .social-icons {
   margin-top: 30px;
 }
@@ -616,7 +621,7 @@ h1.sub-title:hover {
   text-decoration: none;
   font-size: 30px;
   margin-right: 15px;
-   color: #dbd0d0;
+   color: #ffffff;
   display: inline-block;
 }
 
